TinyMount-0.1.97
----------------
  - Implement auto mounting.
  - Mount/umount devices asynchronously.

TinyMount-0.1.96
----------------
  - Add "Settings" dialog.

TinyMount-0.1.95
----------------
  First 0.2 alpfa
  New features:
    - add config file
    - support settings to hide system disks, hide notifications (except
      errors).

TinyMount-0.1.0
---------------
  First release.
  Features supported:
    - notify on device connected/disconnected.
    - mount/unmount device by user click.