@@ -22,10 +22,13 @@
 
 static const char* SHOW_SYSTEM_DISKS = "ShowSystemDisks";
 static const char* MOUNT_AUTOMATICALY = "MountAutomaticaly";
+static const char* ITEM_FORMAT = "ItemFormat";
 
 static const char* NOTIFICATIONS = "Notifications";
 static const char* NTF_DEVICES = "Devices";
 static const char* NTF_MOUNT = "Mount";
+
+static const char* DEFAULT_ITEM_FORMAT = "%name% (%fs%) %size%";
 
 SettingsManager::SettingsManager()
 {
@@ -43,6 +46,7 @@ void SettingsManager::readSettings()
     QSettings s("tinymount", "tinymount");
     settings.showSystemDisks = s.value(SHOW_SYSTEM_DISKS, true).toBool();
     settings.mountAutomaticaly = s.value(MOUNT_AUTOMATICALY, false).toBool();
+    settings.itemFormat = s.value(ITEM_FORMAT, DEFAULT_ITEM_FORMAT).toString();
 
     s.beginGroup(NOTIFICATIONS);
     settings.deviceNotifications = s.value(NTF_DEVICES, true).toBool();
@@ -56,7 +60,13 @@ void SettingsManager::save(const Settings& newSettings)
     QSettings s("tinymount", "tinymount");
     s.setValue(SHOW_SYSTEM_DISKS, settings.showSystemDisks);
     s.setValue(MOUNT_AUTOMATICALY, settings.mountAutomaticaly);
+    s.setValue(ITEM_FORMAT, settings.itemFormat);
     s.beginGroup(NOTIFICATIONS);
     s.setValue(NTF_DEVICES, settings.deviceNotifications);
     s.setValue(NTF_MOUNT, settings.mountNotifications);
+}
+
+QString SettingsManager::defaultItemFormat()
+{
+    return DEFAULT_ITEM_FORMAT;
 }
