@@ -1,3 +1,7 @@
+TinyMount-0.1.98
+----------------
+  - Add item format setting.
+
 TinyMount-0.1.97
 ----------------
   - Implement auto mounting.
